# icp_related

lidar_localization/: CMakeLists.txt
lidar_localization/config/dataset/: config.json
lidar_localization/config/front_end/: config.json
lidar_localization/include/lidar_localization/front_end/: front_end.hpp  front_end_flow.hpp
lidar_localization/include/lidar_localization/image/: image_processor.h  image_utils.h
lidar_localization/include/lidar_localization/models/cloud_filter/: cloud_filter_interface.hpp  voxel_filter.hpp
lidar_localization/include/lidar_localization/models/registration/: icp_registration.hpp  icp_svd_registration.hpp  imls_registration.txt  ndt_registration.hpp  registration_interface.hpp
lidar_localization/launch/: front_end.launch
lidar_localization/slam_data/trajectory/: ground_truth.txt  laser_odom.txt
lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
lidar_localization/src/image/: image_processor.cpp
lidar_localization/src/models/cloud_filter/: voxel_filter.cpp
lidar_localization/src/models/registration/: icp_registration.cpp  icp_svd_registration.cpp  imls_registration.txt  ndt_registration.cpp
lidar_localization/src/models/registration/sicp/: sicp_registration.cpp
plicp/: CMakeLists.txt  result.txt
plicp/include/: Solve.h  any.hpp  iterative_closest_point.h  nabo.h  nabo_private.h  plicp.h  plicp_debug.h  pose2d.h  rtree.h
plicp/src/: Solve.cpp  iterative_closest_point.cpp  main.cpp  plicp.cpp  plicp_debug.cpp  pose2d.cpp
(+3 files in other folders)
